--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "storybook dev -p 6006",
     "build": "storybook build",
-    "preview-storybook": "serve storybook-static"
+    "preview": "serve storybook-static"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
+    "serve": "^14.2.4",
     "storybook": "8.4.6",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
