--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "ui-kit-boilerplate",
   "private": true,
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "start:storybook": "turbo run preview --filter=storybook",
+    "dev:ui-kit": "turbo run dev --parallel --filter=@repo/ui --filter=storybook",
+    "build:storybook": "turbo run build --filter=storybook",
+    "build:ui-kit": "turbo run build --filter=...@repo/ui"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
-    "turbo": "^2.3.3",
-    "typescript": "5.5.4"
+    "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
